force-app/main/default/objects/TAD_Order__c/fields/ordexp_days_until_departure_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_days_until_departure_date__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days until departure date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>