force-app/main/default/objects/TAD_Order__c/fields/ordexp_deal__c.field-meta.xml
<CustomField>
    <fullName>ordexp_deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>TAD_Orders_Deal</relationshipName>
    <type>Lookup</type>
</CustomField>