force-app/main/default/objects/TAD_Order__c/fields/ordexp_deal_has_flights__c.field-meta.xml
<CustomField>
    <fullName>ordexp_deal_has_flights__c</fullName>
    <formula>ordexp_deal__r.has_flights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal has flights</label>
    <type>Checkbox</type>
</CustomField>