force-app/main/default/objects/TAD_Order__c/fields/ordexp_deal_id_title__c.field-meta.xml
<CustomField>
    <fullName>ordexp_deal_id_title__c</fullName>
    <formula>ordexp_deal__r.Deal_ID_Title__c</formula>
    <label>Deal ID + Title</label>
    <type>Text</type>
</CustomField>