force-app/main/default/objects/TAD_Order__c/fields/ordexp_deal_Option_Purchased__c.field-meta.xml
<CustomField>
    <fullName>ordexp_deal_Option_Purchased__c</fullName>
    <formula>IF( RecordType.Name == &apos;Hotel&apos;, ordexp_deal__r.Name +&apos; &amp; &apos;+ ordexp_option__r.Name +&apos; &amp; &apos;+ Property_Name__c , ordexp_deal__r.Name +&apos; &amp; &apos;+ ordexp_option__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal &amp; Option Purchased</label>
    <type>Text</type>
</CustomField>