force-app/main/default/objects/TAD_Order__c/fields/ordexp_deal_type__c.field-meta.xml
<CustomField>
    <fullName>ordexp_deal_type__c</fullName>
    <formula>IF(INCLUDES(ordexp_deal__r.deal_type__c , &apos;stay&apos;), &apos;Stay|&apos;,&apos;&apos;) + IF(INCLUDES(ordexp_deal__r.deal_type__c , &apos;travel&apos;), &apos;Travel|&apos;,&apos;&apos;) +  IF(INCLUDES(ordexp_deal__r.deal_type__c , &apos;Cruise&apos;),&apos;Cruise|&apos; ,&apos;&apos;) + IF(TEXT(ordexp_deal__r.Dates_Flights__c) =&apos;Dates/Domestic Flights&apos; || TEXT(ordexp_deal__r.Dates_Flights__c) =&apos;Dates/International Flights&apos;, &apos;Flight|&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type</label>
    <type>Text</type>
</CustomField>