force-app/main/default/objects/TAD_Order__c/fields/ordexp_departure_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_departure_date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departure date</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>departures_dates__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.ordexp_deal__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.options__c</field>
            <operation>equals</operation>
            <valueField>$Source.ordexp_option__c</valueField>
        </filterItems>
        <filterItems>
            <field>departures_dates__c.online_status__c</field>
            <operation>equals</operation>
            <value>Online</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>TAD_Orders_DD</relationshipName>
    <type>Lookup</type>
</CustomField>