force-app/main/default/objects/TAD_Order__c/fields/ordexp_departure_date_aestopover__c.field-meta.xml
<CustomField>
    <fullName>ordexp_departure_date_aestopover__c</fullName>
    <label>Departure date AE/Stopover</label>
    <type>Date</type>
</CustomField>