force-app/main/default/objects/TAD_Order__c/fields/ordexp_email_purchaser__c.field-meta.xml
<CustomField>
    <fullName>ordexp_email_purchaser__c</fullName>
    <label>Email(purchaser)</label>
    <type>Email</type>
</CustomField>