force-app/main/default/objects/TAD_Order__c/fields/ordexp_exclude_sending_tp__c.field-meta.xml
<CustomField>
    <fullName>ordexp_exclude_sending_tp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude sending TP</label>
    <type>Checkbox</type>
</CustomField>