force-app/main/default/objects/TAD_Order__c/fields/ordexp_extend_on_hold_time__c.field-meta.xml
<CustomField>
    <fullName>ordexp_extend_on_hold_time__c</fullName>
    <label>Extend on hold time</label>
    <type>DateTime</type>
</CustomField>