force-app/main/default/objects/TAD_Order__c/fields/ordexp_final_departure_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_final_departure_date__c</fullName>
    <formula>IF( ISBLANK(ordexp_departure_date_aestopover__c ) ||  ISNULL(ordexp_departure_date_aestopover__c )  ,  DATEVALUE( ordexp_departure_date__r.Name )  , ordexp_departure_date_aestopover__c )</formula>
    <label>Final Departure date</label>
    <type>Date</type>
</CustomField>