force-app/main/default/objects/TAD_Order__c/fields/ordexp_final_return_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_final_return_date__c</fullName>
    <formula>IF( ISBLANK( ordexp_return_date_sb_stopover__c ) || ISNULL(ordexp_return_date_sb_stopover__c ) ,  ordexp_departure_date__r.ordexp_return_date__c  , ordexp_return_date_sb_stopover__c )</formula>
    <label>Final Return Date</label>
    <type>Date</type>
</CustomField>