force-app/main/default/objects/TAD_Order__c/fields/ordexp_flight_schedule_change__c.field-meta.xml
<CustomField>
    <fullName>ordexp_flight_schedule_change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flight schedule change</label>
    <type>Checkbox</type>
</CustomField>