force-app/main/default/objects/TAD_Order__c/fields/ordexp_flights_ticketed__c.field-meta.xml
<CustomField>
    <fullName>ordexp_flights_ticketed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights ticketed</label>
    <type>Checkbox</type>
</CustomField>