force-app/main/default/objects/TAD_Order__c/fields/ordexp_flights_ticketed_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_flights_ticketed_date__c</fullName>
    <label>Flights ticketed date</label>
    <type>Date</type>
</CustomField>