force-app/main/default/objects/TAD_Order__c/fields/ordexp_generate_order_lines_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_generate_order_lines_date__c</fullName>
    <label>Generate order lines date</label>
    <type>DateTime</type>
</CustomField>