force-app/main/default/objects/TAD_Order__c/fields/ordexp_gross_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_gross_amount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Gross Amount (excl HSS)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>