force-app/main/default/objects/TAD_Order__c/fields/ordexp_gross_amount_final__c.field-meta.xml
<CustomField>
    <fullName>ordexp_gross_amount_final__c</fullName>
    <formula>ordexp_gross_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>