force-app/main/default/objects/TAD_Order__c/fields/ordexp_has_extra_documents__c.field-meta.xml
<CustomField>
    <fullName>ordexp_has_extra_documents__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has extra documents</label>
    <type>Checkbox</type>
</CustomField>