force-app/main/default/objects/TAD_Order__c/fields/ordexp_hss_escapes__c.field-meta.xml
<CustomField>
    <fullName>ordexp_hss_escapes__c</fullName>
    <label>HSS - escapes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>