force-app/main/default/objects/TAD_Order__c/fields/ordexp_info_aesb__c.field-meta.xml
<CustomField>
    <fullName>ordexp_info_aesb__c</fullName>
    <formula>IF(ordexp_aesb_check__c=true &amp;&amp; ordexp_stopover_check__c=true &amp;&amp; ordexp_airline_upgrade_check__c=true, IMAGE(&quot;/resource/Warning_Sign&quot;, &quot;No Image&quot;)+ &apos; Contains AE/SB &amp; Stopover &amp; Airline Upgrade&apos;,  IF(ordexp_aesb_check__c=true &amp;&amp; ordexp_stopover_check__c=false &amp;&amp; ordexp_airline_upgrade_check__c=true, IMAGE(&quot;/resource/Warning_Sign&quot;, &quot;No Image&quot;)+ &apos; Contains AE/SB &amp; Airline Upgrade&apos;,  IF(ordexp_aesb_check__c=false &amp;&amp; ordexp_stopover_check__c=true &amp;&amp; ordexp_airline_upgrade_check__c=true, IMAGE(&quot;/resource/Warning_Sign&quot;, &quot;No Image&quot;)+ &apos; Contains Stopovers &amp; Airline Upgrade&apos;, IF(ordexp_aesb_check__c=false&amp;&amp; ordexp_stopover_check__c=false &amp;&amp; ordexp_airline_upgrade_check__c=true, IMAGE(&quot;/resource/Warning_Sign&quot;, &quot;No Image&quot;)+ &apos; Contains Airline Upgrade&apos;,&apos;&apos;)
))) + &apos; &apos;+ 
IF(ordexp_aesb_check__c=false &amp;&amp; ordexp_stopover_check__c=false &amp;&amp; ordexp_airline_upgrade_check__c=false,  IF(Cancellation_Count__c &gt;0, IMAGE(&quot;/resource/Warning_Sign&quot;, &quot;No Image&quot;) +&apos; Has Cancellation&apos;, &apos;&apos;) ,  IF(Cancellation_Count__c &gt;0, &apos; &amp; Has Cancellation&apos;, &apos;&apos;) )</formula>
    <label>Info</label>
    <type>Text</type>
</CustomField>