force-app/main/default/objects/TAD_Order__c/fields/ordexp_insurance_referral__c.field-meta.xml
<CustomField>
    <fullName>ordexp_insurance_referral__c</fullName>
    <label>Insurance referral</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Quote Required</fullName>
            </value>
            <value>
                <fullName>Refused - Already purchased TAD Insurance</fullName>
            </value>
            <value>
                <fullName>Refused - Already purchased other</fullName>
            </value>
            <value>
                <fullName>Refused - Has Credit Card insurance</fullName>
            </value>
            <value>
                <fullName>Insurance Quote Provided (VI Team use only)</fullName>
            </value>
            <value>
                <fullName>Attempted Contact (VI Team use only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>