force-app/main/default/objects/TAD_Order__c/fields/ordexp_is_phone_sale__c.field-meta.xml
<CustomField>
    <fullName>ordexp_is_phone_sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is phone sale</label>
    <type>Checkbox</type>
</CustomField>