force-app/main/default/objects/TAD_Order__c/fields/ordexp_is_short_lead__c.field-meta.xml
<CustomField>
    <fullName>ordexp_is_short_lead__c</fullName>
    <formula>IF( ordexp_departure_date__r.date__c - DATEVALUE(ordexp_purchase_date__c) &lt;= 90, &quot;Yes&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is short lead</label>
    <type>Text</type>
</CustomField>