force-app/main/default/objects/TAD_Order__c/fields/ordexp_isstay__c.field-meta.xml
<CustomField>
    <fullName>ordexp_isstay__c</fullName>
    <formula>IF(OR(INCLUDES(ordexp_deal__r.deal_type__c, &apos;stay&apos;), INCLUDES(ordexp_deal__r.deal_type_nz__c, &apos;stay&apos;)), TRUE, FALSE)</formula>
    <label>isstay</label>
    <type>Checkbox</type>
</CustomField>