force-app/main/default/objects/TAD_Order__c/fields/ordexp_marketing_source__c.field-meta.xml
<CustomField>
    <fullName>ordexp_marketing_source__c</fullName>
    <label>Marketing source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>