force-app/main/default/objects/TAD_Order__c/fields/ordexp_marketing_source_picklist__c.field-meta.xml
<CustomField>
    <fullName>ordexp_marketing_source_picklist__c</fullName>
    <label>Marketing source picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email (Newsletter)</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Friend/relative</fullName>
            </value>
            <value>
                <fullName>(NSW) Sunday Telegraph</fullName>
            </value>
            <value>
                <fullName>(QLD) The Sunday Mail</fullName>
            </value>
            <value>
                <fullName>(VIC) The Sunday Herald Sun</fullName>
            </value>
            <value>
                <fullName>Banner Advert</fullName>
            </value>
            <value>
                <fullName>YouTube Video</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>(NSW) 2GB</fullName>
            </value>
            <value>
                <fullName>(NSW) BAY FM</fullName>
            </value>
            <value>
                <fullName>(VIC) 3AW</fullName>
            </value>
            <value>
                <fullName>(QLD) 4BC</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Game Event</fullName>
            </value>
            <value>
                <fullName>Return Customer</fullName>
            </value>
            <value>
                <fullName>Roadshow</fullName>
            </value>
            <value>
                <fullName>(QLD) The Courier Mail (Tuesday)</fullName>
            </value>
            <value>
                <fullName>(QLD) The Courier Mail (Friday)</fullName>
            </value>
            <value>
                <fullName>(VIC) The Herald Sun (Tuesday)</fullName>
            </value>
            <value>
                <fullName>(VIC) The Herald Sun (Friday)</fullName>
            </value>
            <value>
                <fullName>(NSW) The Daily Telegraph (Tuesday)</fullName>
            </value>
            <value>
                <fullName>(NSW) The Daily Telegraph (Friday)</fullName>
            </value>
            <value>
                <fullName>(SA) The Adelaide Advertiser (Tuesday)</fullName>
            </value>
            <value>
                <fullName>(SA) The Adelaide Advertiser (Friday)</fullName>
            </value>
            <value>
                <fullName>Melbourne City Football Club</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>