force-app/main/default/objects/TAD_Order__c/fields/ordexp_master_status__c.field-meta.xml
<CustomField>
    <fullName>ordexp_master_status__c</fullName>
    <label>Master status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
                <default>true</default>
                <label>On Hold</label>
            </value>
            <value>
                <fullName>Temporary Hold</fullName>
            </value>
            <value>
                <fullName>Secured</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Travelled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>In Progress-Cruise only</fullName>
                <isActive>false</isActive>
                <label>In Progress-Cruise only</label>
            </value>
            <value>
                <fullName>In Progress-Flight only</fullName>
                <isActive>false</isActive>
                <label>In Progress-Flight only</label>
            </value>
            <value>
                <fullName>In Progress-Flights + Cruise</fullName>
                <isActive>false</isActive>
                <label>In Progress-Flights + Cruise</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>