force-app/main/default/objects/TAD_Order__c/fields/ordexp_merchant_confirmation_address__c.field-meta.xml
<CustomField>
    <fullName>ordexp_merchant_confirmation_address__c</fullName>
    <label>Merchant confirmation address</label>
    <type>Email</type>
</CustomField>