force-app/main/default/objects/TAD_Order__c/fields/ordexp_nett_amount__c.field-meta.xml
<CustomField>
    <fullName>ordexp_nett_amount__c</fullName>
    <formula>ordexp_gross_amount_final__c  -  (Total_Order_Coupons_Discount__c) -  ordexp_wholesale_commissions__c  -  Total_OIi_Coupons_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nett Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>