force-app/main/default/objects/TAD_Order__c/fields/ordexp_option__c.field-meta.xml
<CustomField>
    <fullName>ordexp_option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Option</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>options__c.Deal__c</field>
            <operation>equals</operation>
            <valueField>$Source.ordexp_deal__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>TAD_Orders_Options</relationshipName>
    <type>Lookup</type>
</CustomField>