force-app/main/default/objects/TAD_Order__c/fields/ordexp_option_purchased__c.field-meta.xml
<CustomField>
    <fullName>ordexp_option_purchased__c</fullName>
    <formula>ordexp_option__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Option purchased</label>
    <type>Text</type>
</CustomField>