force-app/main/default/objects/TAD_Order__c/fields/ordexp_Order_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Order_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Cancelled</label>
    <type>Checkbox</type>
</CustomField>