force-app/main/default/objects/TAD_Order__c/fields/ordexp_order_id__c.field-meta.xml
<CustomField>
    <fullName>ordexp_order_id__c</fullName>
    <label>order id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>