force-app/main/default/objects/TAD_Order__c/fields/ordexp_order_information__c.field-meta.xml
<CustomField>
    <fullName>ordexp_order_information__c</fullName>
    <label>Information for Travel Pack</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>