force-app/main/default/objects/TAD_Order__c/fields/ordexp_order_status_ws__c.field-meta.xml
<CustomField>
    <fullName>ordexp_order_status_ws__c</fullName>
    <label>Order status (WS)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>PIF Required</fullName>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>