force-app/main/default/objects/TAD_Order__c/fields/ordexp_partially_ticketed__c.field-meta.xml
<CustomField>
    <fullName>ordexp_partially_ticketed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partially ticketed</label>
    <type>Checkbox</type>
</CustomField>