force-app/main/default/objects/TAD_Order__c/fields/ordexp_passenger_confirmation_email_sent__c.field-meta.xml
<CustomField>
    <fullName>ordexp_passenger_confirmation_email_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passenger confirmation email sent</label>
    <type>Checkbox</type>
</CustomField>