force-app/main/default/objects/TAD_Order__c/fields/ordexp_pax_travelling__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pax_travelling__c</fullName>
    <formula>PAX_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PAX travelling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>