force-app/main/default/objects/TAD_Order__c/fields/ordexp_payment_type__c.field-meta.xml
<CustomField>
    <fullName>ordexp_payment_type__c</fullName>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>