force-app/main/default/objects/TAD_Order__c/fields/ordexp_pif_count__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pif_count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PIF count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>