force-app/main/default/objects/TAD_Order__c/fields/ordexp_pif_outstanding__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pif_outstanding__c</fullName>
    <formula>Quantity_Confirmed__c  - ordexp_pif_count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIF Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>