force-app/main/default/objects/TAD_Order__c/fields/ordexp_pif_outstanding_check__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pif_outstanding_check__c</fullName>
    <formula>IF( NOT(ISNULL(ordexp_purchase_date__c)),  IF( NOW() - ordexp_purchase_date__c &gt;= 7, true, false) , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIF Outstanding Check</label>
    <type>Checkbox</type>
</CustomField>