force-app/main/default/objects/TAD_Order__c/fields/ordexp_pif_outstanding_to_zero_time__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pif_outstanding_to_zero_time__c</fullName>
    <label>PIF outstanding to zero time</label>
    <type>DateTime</type>
</CustomField>