force-app/main/default/objects/TAD_Order__c/fields/ordexp_pnr__c.field-meta.xml
<CustomField>
    <fullName>ordexp_pnr__c</fullName>
    <label>PNR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>