force-app/main/default/objects/TAD_Order__c/fields/ordexp_poli_link_sent__c.field-meta.xml
<CustomField>
    <fullName>ordexp_poli_link_sent__c</fullName>
    <label>POLi link sent</label>
    <type>DateTime</type>
</CustomField>