force-app/main/default/objects/TAD_Order__c/fields/ordexp_poli_notation__c.field-meta.xml
<CustomField>
    <fullName>ordexp_poli_notation__c</fullName>
    <label>POLi notation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>