force-app/main/default/objects/TAD_Order__c/fields/ordexp_purchase_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_purchase_date__c</fullName>
    <label>Purchase date</label>
    <type>DateTime</type>
</CustomField>