force-app/main/default/objects/TAD_Order__c/fields/ordexp_quote_required_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_quote_required_date__c</fullName>
    <label>Quote required date</label>
    <type>DateTime</type>
</CustomField>