force-app/main/default/objects/TAD_Order__c/fields/ordexp_referrer__c.field-meta.xml
<CustomField>
    <fullName>ordexp_referrer__c</fullName>
    <label>Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TripADeal</fullName>
            </value>
            <value>
                <fullName>NRMA Blue</fullName>
            </value>
            <value>
                <fullName>facebook</fullName>
            </value>
            <value>
                <fullName>TC</fullName>
            </value>
            <value>
                <fullName>NRMA</fullName>
            </value>
            <value>
                <fullName>World Traveller</fullName>
            </value>
            <value>
                <fullName>test</fullName>
                <isActive>false</isActive>
                <label>test</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>