force-app/main/default/objects/TAD_Order__c/fields/ordexp_resend_confirmation__c.field-meta.xml
<CustomField>
    <fullName>ordexp_resend_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Resend confirmation email stays deals</label>
    <type>Checkbox</type>
</CustomField>