force-app/main/default/objects/TAD_Order__c/fields/ordexp_return_date__c.field-meta.xml
<CustomField>
    <fullName>ordexp_return_date__c</fullName>
    <label>Return date</label>
    <type>Date</type>
</CustomField>