force-app/main/default/objects/TAD_Order__c/fields/ordexp_return_date_sb_stopover__c.field-meta.xml
<CustomField>
    <fullName>ordexp_return_date_sb_stopover__c</fullName>
    <label>Return date SB/Stopover</label>
    <type>Date</type>
</CustomField>