force-app/main/default/objects/TAD_Order__c/fields/ordexp_s_over_booked__c.field-meta.xml
<CustomField>
    <fullName>ordexp_s_over_booked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>S/Over Booked</label>
    <type>Checkbox</type>
</CustomField>