force-app/main/default/objects/TAD_Order__c/fields/ordexp_sabre_delete_group_profile__c.field-meta.xml
<CustomField>
    <fullName>ordexp_sabre_delete_group_profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sabre delete group profile</label>
    <type>Checkbox</type>
</CustomField>