force-app/main/default/objects/TAD_Order__c/fields/ordexp_sabre_group_profile_uid__c.field-meta.xml
<CustomField>
    <fullName>ordexp_sabre_group_profile_uid__c</fullName>
    <label>Sabre group profile uid</label>
    <length>10</length>
    <type>Text</type>
</CustomField>