force-app/main/default/objects/TAD_Order__c/fields/ordexp_status_check__c.field-meta.xml
<CustomField>
    <fullName>ordexp_status_check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field especially created for Order Status Updation</description>
    <label>Status Check</label>
    <type>Checkbox</type>
</CustomField>