force-app/main/default/objects/TAD_Order__c/fields/ordexp_Stay_Allocation__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Stay_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stay Allocation</label>
    <type>Checkbox</type>
</CustomField>