force-app/main/default/objects/TAD_Order__c/fields/ordexp_Stop_Comms_via_Order_Date_Deal__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Stop_Comms_via_Order_Date_Deal__c</fullName>
    <formula>IF(
OR( ordexp_Stop_Order_Comms__c, ordexp_departure_date__r.stop_order_comms__c , ordexp_deal__r.stop_order_comms__c ),
TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stop Comms via Order/Date/Deal</label>
    <type>Checkbox</type>
</CustomField>