force-app/main/default/objects/TAD_Order__c/fields/ordexp_Stop_Order_Comms__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Stop_Order_Comms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Order Comms</label>
    <type>Checkbox</type>
</CustomField>