force-app/main/default/objects/TAD_Order__c/fields/ordexp_stopover_check__c.field-meta.xml
<CustomField>
    <fullName>ordexp_stopover_check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stopover Check</label>
    <type>Checkbox</type>
</CustomField>