force-app/main/default/objects/TAD_Order__c/fields/ordexp_Sub_Options_for_Stay__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Sub_Options_for_Stay__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Options for Stay</label>
    <referenceTo>sub_options__c</referenceTo>
    <relationshipLabel>TAD Orders</relationshipLabel>
    <relationshipName>TAD_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>