force-app/main/default/objects/TAD_Order__c/fields/ordexp_sub_status__c.field-meta.xml
<CustomField>
    <fullName>ordexp_sub_status__c</fullName>
    <label>Sub status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ordexp_master_status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Payment Pending</fullName>
            </value>
            <value>
                <fullName>Cancellation Request</fullName>
            </value>
            <value>
                <fullName>Class (Sub Option) - Accom/Cabin Upgrade</fullName>
            </value>
            <value>
                <fullName>Duration/Extention (Option) - Upgrade</fullName>
            </value>
            <value>
                <fullName>Flight Quote Request</fullName>
            </value>
            <value>
                <fullName>Internal Correction/Change</fullName>
            </value>
            <value>
                <fullName>PAX Change Pending</fullName>
            </value>
            <value>
                <fullName>Paid - PIF/s Overdue</fullName>
            </value>
            <value>
                <fullName>Paid - PIF/s Due</fullName>
            </value>
            <value>
                <fullName>Stay Booking - No Ticketing Required</fullName>
            </value>
            <value>
                <fullName>Cabins Pending - Mins Not Met</fullName>
            </value>
            <value>
                <fullName>Flights Pending - Mins Not Met</fullName>
            </value>
            <value>
                <fullName>Flights Pending - Out of Range</fullName>
            </value>
            <value>
                <fullName>Flights Pending - Ready to Ticket</fullName>
            </value>
            <value>
                <fullName>Cabins Pending/Flights Booked - Cabin Ready to Ticket</fullName>
            </value>
            <value>
                <fullName>Cabins Booked</fullName>
            </value>
            <value>
                <fullName>Flights Booked</fullName>
            </value>
            <value>
                <fullName>Cabins Booked/Flights Booked</fullName>
            </value>
            <value>
                <fullName>BC Sent</fullName>
            </value>
            <value>
                <fullName>TP Sent &amp; Cruise Ticket Pending</fullName>
            </value>
            <value>
                <fullName>Travelling</fullName>
            </value>
            <value>
                <fullName>Survey Sent</fullName>
            </value>
            <value>
                <fullName>Survey Returned</fullName>
            </value>
            <value>
                <fullName>Expired/Time out</fullName>
            </value>
            <value>
                <fullName>Offloaded</fullName>
            </value>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
            <value>
                <fullName>Min Number - Credit/Refund</fullName>
            </value>
            <value>
                <fullName>Pax No Show</fullName>
            </value>
            <value>
                <fullName>Flights Ticketed - NO S/O</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>