force-app/main/default/objects/TAD_Order__c/fields/ordexp_time_tracker__c.field-meta.xml
<CustomField>
    <fullName>ordexp_time_tracker__c</fullName>
    <formula>ordexp_bc_date__c  -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Tracker</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>