force-app/main/default/objects/TAD_Order__c/fields/ordexp_total_payment_received__c.field-meta.xml
<CustomField>
    <fullName>ordexp_total_payment_received__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Payment Received</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>